# AICup2019

./: .gitignore  README.md
aicup-cpp/: CMakeLists.txt  Debug.hpp  MyStrategy.cpp  TcpStream.cpp  main.cpp
aicup-cpp/model/: Vec2Double.cpp
